# ttn2otel

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/: ttn2otel.py
