[tool.poetry]
name = "ttn2otel"
version = "0.1.0"
description = "Forward The Things Network device metrics to an OTEL Receiver"
authors = ["Matthew Macdonald-Wallace <matt@doics.co>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
paho-mqtt = "^2.1.0"
pyyaml = "^6.0.1"
opentelemetry-distro = "^0.46b0"
opentelemetry-exporter-otlp = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
